--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@ p{
   background-color: rgba(212, 208, 149, 0.658);
 }
 .pUsername{
-  margin: 36% auto;
-  font-size: 2.2vw;
+  margin: 22% auto;
+  font-size: 3.2vw;
+  text-underline-position: inherit;
+  height: 10vw; 
+  max-width: 19vw;
 }
