--- a/css/nourish.css
+++ b/css/nourish.css
@@ -1,4 +1,4 @@
-.mental {
+.nourish {
   width: 20vw;
   height: 20vw;
   border-radius: 50%;
@@ -32,8 +32,8 @@
 }
 
 .content {
-  width: 76vw;
-  height: 76vw;
+  width: 70vw;
+  height: 70vw;
   border-radius: 50%;
   font-size: 2vw;
   color: #fff;
