--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,58 +1,66 @@
-#Courtney{
-  width: 27vw;
-  height: 27vw; 
-  position: absolute;
-  margin: 2vw 2vw;
-  background-color: rgba(178, 149, 212, 0.425);
-  text-underline-position: inherit;
-}
-
-#Edgar{
-  width: 27vw;
-  height: 27vw; 
-  position: absolute;
-  margin: 22vw 48vw;
-  background-color: rgba(178, 149, 212, 0.425);
-  text-underline-position: inherit;
-}
-
-#Sarah{
-  width: 27vw;
-  height: 27vw; 
-  position: absolute;
-  margin: 1vw 30vw;
-  background-color: rgba(178, 149, 212, 0.425);
-  text-underline-position: inherit;
-}
-
-#Spencer{
-  width: 27vw;
-  height: 27vw; 
-  position: absolute;
-  margin: 32vw 2vw;
-  background-color: rgba(178, 149, 212, 0.425);
-  text-underline-position: inherit;
-}
-
-#return-to-home{
-  width: 27vw;
-  height: 27vw; 
-  position: absolute;
-  margin: 44vw 28vw;
-  background-color: rgba(178, 149, 212, 0.425);
-  text-underline-position: inherit;
-}
-
-.circle h2{
+body{
+  max-width: 90%;
+  height: 99%;
+  margin: auto;
   text-align: center;
-  margin: 40% auto;
-  font-size: 3.6vw;
+  justify-content: space-between;
+  margin-top: 20vh;
+}
+main{
+margin: auto;
+}
+
+.formatCircle{
+  width: 18vw;
+  height: 18vw;
+  border-radius: 50%;
+  font-size: 4vw;
+  background-color: rgba(121, 167, 173, 0.801);
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+  margin: 1vw;
+}
+
+a{
+  text-decoration: none;
   color: white;
 }
 
-.circle p{
-  text-align: center;
-  margin: 40% auto;
-  font-size: 3.6vw;
+.home{
   color: white;
+  width: 10vw;
+  height: 10vw;
+  border-radius: 50%;
+  font-size: 3vw;
+  background-color: rgba(121, 167, 173, 0.801);
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
 }
+
+.fade{
+  opacity:0.6;
+}
+.fade:hover{
+  opacity:1;
+  filter: drop-shadow(0 2mm 4mm rgb(134, 134, 134));
+}
+.grow:hover{
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  transition-duration: 2s;
+}
+
+
+
+
+
+/* extra class that can make something rotate 360 with hover */
+/* .rotate:hover{
+  -webkit-transform: rotateZ(-360deg);
+  -ms-transform: rotateZ(-360deg);
+  transform: rotateZ(-360deg);
+  transition-duration: 1s;
+} */
