--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -6,16 +6,18 @@ body{
   justify-content: space-between;
   margin-top: 20vh;
 }
+
 main{
 margin: auto;
 }
 
+/* this class is set on each div tag to make the circles */
 .formatCircle{
   width: 18vw;
   height: 18vw;
   border-radius: 50%;
   font-size: 4vw;
-  background-color: rgba(121, 167, 173, 0.801);
+  background-color: rgba(149, 181, 212, 0.658);
   justify-content: center;
   align-items: center;
   display: inline-flex;
@@ -27,18 +29,22 @@ a{
   color: white;
 }
 
+
+/* this accesses the home circle */
 .home{
   color: white;
   width: 10vw;
   height: 10vw;
   border-radius: 50%;
   font-size: 3vw;
-  background-color: rgba(121, 167, 173, 0.801);
+  background-color: rgba(149, 181, 212, 0.658);
   justify-content: center;
   align-items: center;
   display: inline-flex;
 }
 
+
+/* this element will make an element go from low opacity, to clear when hovered// something could also be done with a filter: blur */
 .fade{
   opacity:0.6;
 }
@@ -46,15 +52,15 @@ a{
   opacity:1;
   filter: drop-shadow(0 2mm 4mm rgb(134, 134, 134));
 }
+
+
+/* this class will make an element grow */
 .grow:hover{
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
   transition-duration: 2s;
 }
-
-
-
 
 
 /* extra class that can make something rotate 360 with hover */
