--- a/css/nourish.css
+++ b/css/nourish.css
@@ -12,6 +12,8 @@
   display:flex;
   justify-content: center;
   align-items: center;
+  animation-name: moveToLeft;
+  animation-duration: 3s;
 }
 
 .home {
@@ -85,3 +87,14 @@ p{
   top: 65%;
   font-size: 4vw;
 }
+
+@keyframes moveToLeft {
+  0% {
+    transform: translateX(-120px) translateY(40px);
+  }
+  100% {
+    transform:translateX(0px) translateY(0px);
+    
+    /* opacity: 1; */
+  }
+}  
