--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,29 @@ a{
 
 
 /* here is a very simple transition class , this has been added to the about, nourish, mind, and body circles just for now.. for the MVP */
+
+
+/* ///////////////////////// */
+/* @keyframes bounce {
+  0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+  40% { transform: translateY(-25px); }
+  60% { transform: translateY(-15px); }
+}
+
+.element {
+  animation-name: bounce;
+  animation-duration: 3s;
+} */
+/* ///////////////////////////// */
+
+
+.grow{
+  transition: 1s ease;
+}
+
 .grow:hover{
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
-  transition-duration: 2s;
+  transition-duration: 1s;
 }
