--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -22,6 +22,8 @@ margin: auto;
   align-items: center;
   display: inline-flex;
   margin: 1vw;
+  animation-name: moveToRight;
+  animation-duration: 2s;
 }
 
 a{
@@ -61,8 +63,6 @@ a{
   transform: scale(1.3);
   transition-duration: 2s;
 }
-
-
 /* extra class that can make something rotate 360 with hover */
 /* .rotate:hover{
   -webkit-transform: rotateZ(-360deg);
@@ -70,3 +70,15 @@ a{
   transform: rotateZ(-360deg);
   transition-duration: 1s;
 } */
+
+
+@keyframes moveToRight {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}              
