--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,11 @@ a{
 }
 
 /* this is the container that the quote will be in  */
-.pQuote{
-  text-underline-position: inherit;
-  margin: auto;
+#quote-body{
   padding: 2vw;
   font-size: 1.8vw;
-  height: 15vw; 
   max-width: 20vw;
-  vertical-align: auto;
+  margin-top: -9vh;
 }
 
 /* this is the nourish circle */
