changed the layout of activity pages, json content

--- a/css/mental.css
+++ b/css/mental.css
@@ -70,6 +70,7 @@ h2, img, p {
   height: auto;
   transform: translateY(-50%);
   text-align: center;
+  line-height: 8vw;
 }
 
 h2{
@@ -78,7 +79,12 @@ h2{
 }
 
 img{
-  top: 35%;
+  top: 15%;
+  max-width: 15vw;
+  margin-left: 20vw;
+  padding-top: 25vw;
+  display:block;
+  z-index: -1;
 }
 
 p{
