--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&display=swap');
+
 /* this holds all of the circles */
 #allCirclesContainer {
   max-width: 97vw;
   margin: auto;
   display: block;
+  font-family: 'Gaegu', cursive;
 }
 
 /* class that makes circles */
@@ -31,7 +34,7 @@ a{
   height: 16vw;
   position: fixed;
   margin: 26vw 73vw;
-  background-color: rgba(212, 177, 149, 0.658);
+  background-color: rgba(76, 249, 255, 0.277);
 }
 
 /* this is the quotes circle */
@@ -40,7 +43,7 @@ a{
   height: 27vw; 
   position: fixed;
   margin: 22vw 6vw;
-  background-color: rgba(178, 149, 212, 0.425);
+  background-color: rgba(175, 137, 218, 0.297);
   text-underline-position: inherit;
 }
 
@@ -58,7 +61,7 @@ a{
   height: 18vw; 
   position: fixed;
   margin: 12vw 52vw;
-  background-color: rgba(149, 212, 191, 0.658);
+  background-color: rgba(81, 250, 171, 0.226);
 }
 
 /* this is the mind circle */
@@ -67,7 +70,7 @@ a{
   height: 20vw; 
   position: absolute;
   margin: .2vw 76vw;
-  background-color: rgba(149, 205, 212, 0.658);
+  background-color: rgba(0, 89, 255, 0.202);
 }
 
 /* this is the random circle */
@@ -76,7 +79,7 @@ a{
   height: 13vw;
   position: fixed;
   margin: 8vw 30vw;
-  background-color: rgba(212, 149, 207, 0.452);
+  background-color: rgba(255, 255, 255, 0.305);
 }
 .pRandom{
   margin: 28% auto;
@@ -89,7 +92,7 @@ a{
   height: 9vw;
   position: fixed;
   margin: 32vw 42vw;
-  background-color: rgba(149, 181, 212, 0.658);
+  background-color: rgba(27, 141, 255, 0.205);
 }
 .pAbout{
   margin: 35% auto;
@@ -102,7 +105,7 @@ a{
   height: 18vw;
   position: fixed;
   margin: 2vw 2vw;
-  background-color: rgba(212, 208, 149, 0.658);
+  background-color: rgba(212, 7, 253, 0.192);
 }
 .pUsername{
   margin: 22% auto;
@@ -112,8 +115,27 @@ a{
   max-width: 19vw;
 }
 
-
-
+.img{
+  background-image: url('/img/bubble.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: multiply;
+  transform:rotate(0deg);
+  -webkit-transform:rotate(0deg);
+  -moz-transform:rotate(0deg);
+  transition:0.5s ease transform;
+}
+.img:hover{
+    background-image: url('/img/bubble.png');
+    background-size: 134%;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* background-blend-mode: lighten 1s; */
+    transform:rotate(120deg);
+    -webkit-transform:rotate(120deg);
+    -moz-transform:rotate(120deg);
+}
 
 
 /* here is a very simple transition class , this has been added to the about, nourish, mind, and body circles just for now.. for the MVP */
