--- a/css/body.css
+++ b/css/body.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&display=swap');
+*{
+  font-family: 'Gaegu', cursive;
+}
+
 .body {
   width: 20vw;
   height: 20vw;
@@ -8,7 +13,7 @@
   text-align: center;
   position: fixed;
   margin: 30vw 76vw;
-  background-color: rgba(212, 177, 149, 0.658);
+  background-color: rgba(76, 249, 255, 0.277);
   display:flex;
   justify-content: center;
   align-items: center;
@@ -26,7 +31,7 @@
   text-align: center;
   position: fixed;
   margin: 18vw 85vw;
-  background-color: rgba(212, 177, 149, 0.658);
+  background-color: rgba(76, 249, 255, 0.277);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +48,7 @@
   text-align: center;
   position: fixed;
   margin: -6vw 4vw;
-  background-color: rgba(212, 177, 149, 0.658);
+  background-color: rgba(76, 249, 255, 0.277);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,6 +92,18 @@ img{
   padding-top: 25vw;
   display:block;
   z-index: -1;
+}
+
+.img{
+  background-image: url('/img/bubble.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: multiply;
+  transform:rotate(0deg);
+  -webkit-transform:rotate(0deg);
+  -moz-transform:rotate(0deg);
+  transition:0.5s ease transform;
 }
 
 p{
