--- a/css/nourish.css
+++ b/css/nourish.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&display=swap');
+*{
+  font-family: 'Gaegu', cursive;
+}
+
 .nourish {
   width: 20vw;
   height: 20vw;
@@ -8,7 +13,7 @@
   text-align: center;
   position: fixed;
   margin: .2vw 76vw;
-  background-color: rgba(149, 212, 191, 0.658);
+  background-color: rgba(81, 250, 171, 0.226);
   display:flex;
   justify-content: center;
   align-items: center;
@@ -26,7 +31,7 @@
   text-align: center;
   position: fixed;
   margin: 22vw 85vw;
-  background-color: rgba(149, 212, 191, 0.658);
+  background-color: rgba(81, 250, 171, 0.226);
   display:flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +48,7 @@
   text-align: center;
   position: fixed;
   margin: -3vw -3vw;
-  background-color: rgba(149, 212, 191, 0.658);
+  background-color: rgba(81, 250, 171, 0.226);
   display:flex;
   justify-content: center;
   align-items: center;
@@ -87,6 +92,19 @@ img{
   padding-top: 25vw;
   display:block;
   z-index: -1;
+}
+
+
+.img{
+  background-image: url('/img/bubble.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: multiply;
+  transform:rotate(0deg);
+  -webkit-transform:rotate(0deg);
+  -moz-transform:rotate(0deg);
+  transition:0.5s ease transform;
 }
 
 p{
