--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&display=swap');
 
 body{
-  background-color: rgba(2, 149, 194, 0.24);
+  background-color: rgba(2, 149, 194, 0.10);
 }
 
 /* warm rgba(244, 174, 250, 0.096);
@@ -145,6 +145,8 @@ a{
     transform:rotate(120deg);
     -webkit-transform:rotate(120deg);
     -moz-transform:rotate(120deg);
+    filter: drop-shadow(0 1mm 2mm  rgba(2, 149, 194, 0.5));
+    z-index: 10;
 }
 
 
