--- a/css/mental.css
+++ b/css/mental.css
@@ -2,6 +2,9 @@
 *{
   font-family: 'Gaegu', cursive;
 }
+body{
+  background-color: rgba(2, 149, 194, 0.08);
+}
 
 .mental {
   width: 20vw;
@@ -93,17 +96,71 @@ img{
 }
 
 .img{
-  background-image: url('/img/bubble.png');
+  background-image: url('/img/bubbleDark60.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
-  background-blend-mode: multiply;
-  transform:rotate(0deg);
+  background-blend-mode: darken;
+  /* transform:rotate(0deg);
   -webkit-transform:rotate(0deg);
-  -moz-transform:rotate(0deg);
+  -moz-transform:rotate(0deg); */
   transition:0.5s ease transform;
 }
 
+.img:hover{
+  /* background-image: url('/img/bubbleDark.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center; */
+  /* background-blend-mode: lighten 1s; */
+  /* transform:rotate(120deg);
+  -webkit-transform:rotate(120deg);
+  -moz-transform:rotate(120deg); */
+  filter: drop-shadow(0 1mm 2mm  rgba(2, 149, 194, 0.5));
+  z-index: 10;
+}
+
+.grow{
+  transition: 1s ease;
+}
+.img:hover{
+  /* background-image: url('/img/bubbleDark.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center; */
+  /* background-blend-mode: lighten 1s; */
+  /* transform:rotate(120deg);
+  -webkit-transform:rotate(120deg);
+  -moz-transform:rotate(120deg); */
+  filter: drop-shadow(0 1mm 2mm  rgba(2, 149, 194, 0.5));
+  z-index: 10;
+}
+
+.grow{
+  transition: 1s ease;
+}
+
+.grow:hover{
+  background-image: url('/img/bubbleDark.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  transition-duration: 1s;
+}
+
+.grow:hover{
+  background-image: url('/img/bubbleDark.png');
+  background-size: 134%;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  transition-duration: 1s;
+}
 p{
   top: 65%;
   font-size: 4vw;
