--- a/css/mental.css
+++ b/css/mental.css
@@ -108,34 +108,17 @@ img{
 }
 
 .img:hover{
-  /* background-image: url('/img/bubbleDark.png');
+  background-image: url('/img/bubbleDark.png');
   background-size: 134%;
   background-repeat: no-repeat;
-  background-position: center; */
-  /* background-blend-mode: lighten 1s; */
+  background-position: center;
+  background-blend-mode: lighten 1s;
   /* transform:rotate(120deg);
   -webkit-transform:rotate(120deg);
   -moz-transform:rotate(120deg); */
   filter: drop-shadow(0 1mm 2mm  rgba(2, 149, 194, 0.5));
   z-index: 10;
 }
-
-.grow{
-  transition: 1s ease;
-}
-.img:hover{
-  /* background-image: url('/img/bubbleDark.png');
-  background-size: 134%;
-  background-repeat: no-repeat;
-  background-position: center; */
-  /* background-blend-mode: lighten 1s; */
-  /* transform:rotate(120deg);
-  -webkit-transform:rotate(120deg);
-  -moz-transform:rotate(120deg); */
-  filter: drop-shadow(0 1mm 2mm  rgba(2, 149, 194, 0.5));
-  z-index: 10;
-}
-
 .grow{
   transition: 1s ease;
 }
@@ -151,16 +134,6 @@ img{
   transition-duration: 1s;
 }
 
-.grow:hover{
-  background-image: url('/img/bubbleDark.png');
-  background-size: 134%;
-  background-repeat: no-repeat;
-  background-position: center;
-  -webkit-transform: scale(1.3);
-  -ms-transform: scale(1.3);
-  transform: scale(1.3);
-  transition-duration: 1s;
-}
 p{
   top: 65%;
   font-size: 4vw;
