--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -57,10 +57,6 @@ a{
   background-repeat: no-repeat;
   background-position: center;
   background-blend-mode: darken;
-  transform:rotate(0deg);
-  -webkit-transform:rotate(0deg);
-  -moz-transform:rotate(0deg);
-  transition:0.5s ease transform;
 }
 
 .img:hover{
@@ -75,6 +71,10 @@ a{
   filter: drop-shadow(0 1mm 1mm  rgba(2, 149, 194, 0.5));
   z-index: 10;
 }
+
+
+
+/* //////////////////// */
 
 /* this element will make an element go from low opacity, to clear when hovered// something could also be done with a filter: blur */
 /* .fade{
