--- a/css/background.css
+++ b/css/background.css
@@ -59,8 +59,8 @@
   width: 50px;
   height: 50px;
   left: 50%;
-  animation-delay: 7s;
-  animation-duration: 12s;
+  animation-delay: 4s;
+  animation-duration: 9s;
 }
 .bubbles li:nth-child(6) {
   width: 24px;
@@ -115,14 +115,14 @@
 .bubbles li:nth-child(13) {
   width: 100px;
   height: 100px;
-  left: 13%;
+  left: 1%;
   animation-delay: 0s;
   animation-duration: 20s;
 }
 .bubbles li:nth-child(14) {
   width: 40px;
   height: 79px;
-  left: 20%;
+  left: 10%;
 }
 .bubbles li:nth-child(15) {
   width: 92px;
@@ -167,8 +167,8 @@
   animation-duration: 14s;
 }
 .bubbles li:nth-child(21) {
-  width: 60px;
-  height: 60px;
+  width: 8vw;
+  height: 8vw;
   left: 15%;
   animation-delay: .2s;
   animation-duration: 16s;
@@ -197,7 +197,7 @@
 .bubbles li:nth-child(25) {
   width: 19px;
   height: 19px;
-  left: 14%;
+  left: 34%;
   animation-delay: 1s;
   animation-duration: 12s;
 }
@@ -206,7 +206,7 @@
   width: 100px;
   height: 100px;
   left: 65%;
-  animation-delay: 0s;
+  animation-delay: 9s;
   animation-duration: 20s;
   z-index: 0;
 }
