--- a/css/background.css
+++ b/css/background.css
@@ -12,7 +12,7 @@
   position: fixed;
   list-style: none;
   display: block;
-  background-image: url('/img/bubble.png');
+  background-image: url('/img/bubbleDark.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
@@ -24,191 +24,193 @@
   bottom: -120px;
   animation: circle 20s infinite;
   transition-timing-function: linear;
-  border-radius: 50px;
-  box-shadow: 0 1px 1px rgba(226, 5, 255, 0.432);
+  border-radius: 20vw;
+  /* box-shadow: 0 1px 1px rgba(226, 5, 255, 0.432); */
   opacity: .4;
 }
 
 .bubbles li:nth-child(1) {
-  width: 40px;
-  height: 40px;
-  left: 20%;
+  width: 3vw;
+  height: 3vw;
+  left: 75%;
 }
 .bubbles li:nth-child(2) {
-  width: 92px;
-  height: 92px;
-  left: 40%;
+  width: 9vw;
+  height: 9vw;
+  left: 85%;
   animation-delay: 8s;
   animation-duration: 17s;
 }
 .bubbles li:nth-child(3) {
-  width: 16px;
-  height: 16px;
+  width: 12vw;
+  height: 12vw;
   left: 60%;
   animation-delay: 4s;
   animation-duration: 13s;
 }
 .bubbles li:nth-child(4) {
-  width: 90px;
-  height: 90px;
+  width: 6vw;
+  height: 6vw;
   left: 80%;
   animation-delay: 1s;
   animation-duration: 22s;
+
 }
 .bubbles li:nth-child(5) {
-  width: 50px;
-  height: 50px;
+  width: 4vw;
+  height: 4vw;
   left: 50%;
   animation-delay: 4s;
   animation-duration: 9s;
 }
 .bubbles li:nth-child(6) {
-  width: 24px;
-  height: 24px;
-  left: 90%;
+  width: 3vw;
+  height: 3vw;
+  left: 40%;
   animation-delay: .2s;
   animation-duration: 20s;
 }
 .bubbles li:nth-child(7) {
-  width: 30px;
-  height: 30px;
-  left: 10%;
+  width: 9vw;
+  height: 9vw;
+  left: 20%;
   animation-delay: .8s;
   animation-duration: 14s;
 }
 .bubbles li:nth-child(8) {
-  width: 60px;
-  height: 60px;
+  width: 6vw;
+  height: 6vw;
   left: 70%;
   animation-delay: .2s;
   animation-duration: 16s;
 }
 .bubbles li:nth-child(9) {
-  width: 10px;
-  height: 10px;
+  width: 3vw;
+  height: 3vw;
   left: 6%;
   animation-delay: 6s;
   animation-duration: 9s;
 }
 .bubbles li:nth-child(10) {
-  width: 90px;
-  height: 90px;
+  width: 9vw;
+  height: 9vw;
   left: 45%;
   animation-delay: 4s;
   animation-duration: 20s;
 }
 .bubbles li:nth-child(11) {
-  width: 50px;
-  height: 50px;
+  width: 3vw;
+  height: 3vw;
   left: 30%;
-  animation-delay: 0s;
+  animation-delay: 10s;
   animation-duration: 12s;
 }
 .bubbles li:nth-child(12) {
-  width: 19px;
-  height: 19px;
+  width: 9vw;
+  height: 9vw;
   left: 94%;
-  animation-delay: 1s;
+  animation-delay: 5s;
   animation-duration: 12s;
 }
 
 .bubbles li:nth-child(13) {
-  width: 100px;
-  height: 100px;
-  left: 1%;
-  animation-delay: 0s;
+  width: 10vw;
+  height: 10vw;
+  left: 15%;
+  animation-delay: 8s;
   animation-duration: 20s;
 }
 .bubbles li:nth-child(14) {
-  width: 40px;
-  height: 79px;
+  width: 4vw;
+  height: 4vw;
   left: 10%;
+  animation-delay: 8s;
+  animation-duration: 15s;
 }
 .bubbles li:nth-child(15) {
-  width: 92px;
-  height: 92px;
+  width: 8vw;
+  height: 8vw;
   left: 78%;
   animation-delay: 9s;
   animation-duration: 17s;
 }
 .bubbles li:nth-child(16) {
-  width: 16px;
-  height: 16px;
+  width: 3vw;
+  height: 3vw;
   left: 38%;
-  animation-delay: 2s;
+  animation-delay: 13s;
   animation-duration: 13s;
 }
 .bubbles li:nth-child(17) {
-  width: 90px;
-  height: 90px;
+  width: 9vw;
+  height: 9vw;
   left: 83%;
   animation-delay: 6s;
   animation-duration: 22s;
 }
 .bubbles li:nth-child(18) {
-  width: 50px;
-  height: 50px;
+  width: 5vw;
+  height: 5vw;
   left: 43%;
   animation-delay: 0s;
   animation-duration: 18s;
 }
 .bubbles li:nth-child(19) {
-  width: 24px;
-  height: 24px;
+  width: 2vw;
+  height: 2vw;
   left: 30%;
-  animation-delay: .2s;
+  animation-delay: 8s;
   animation-duration: 20s;
 }
 .bubbles li:nth-child(20) {
-  width: 30px;
-  height: 30px;
+  width: 3vw;
+  height: 3vw;
   left: 80%;
   animation-delay: .8s;
   animation-duration: 14s;
 }
 .bubbles li:nth-child(21) {
-  width: 8vw;
-  height: 8vw;
+  width: 3vw;
+  height: 3vw;
   left: 15%;
-  animation-delay: .2s;
+  animation-delay: 15s;
   animation-duration: 16s;
 }
 .bubbles li:nth-child(22) {
-  width: 10px;
-  height: 10px;
+  width: 10vw;
+  height: 10vw;
   left: 98%;
   animation-delay: 6s;
   animation-duration: 9s;
 }
 .bubbles li:nth-child(23) {
-  width: 90px;
-  height: 90px;
+  width: 9vw;
+  height: 9vw;
   left: 5%;
-  animation-delay: 4s;
+  animation-delay: 6s;
   animation-duration: 20s;
 }
 .bubbles li:nth-child(24) {
-  width: 50px;
-  height: 50px;
+  width: 5vw;
+  height: 5vw;
   left: 55%;
   animation-delay: 10s;
   animation-duration: 12s;
 }
 .bubbles li:nth-child(25) {
-  width: 19px;
-  height: 19px;
+  width: 8vw;
+  height: 8vw;
   left: 34%;
-  animation-delay: 1s;
+  animation-delay: 3s;
   animation-duration: 12s;
 }
 
 .bubbles li:nth-child(26) {
-  width: 100px;
-  height: 100px;
+  width: 3vw;
+  height: 3vw;
   left: 65%;
   animation-delay: 9s;
   animation-duration: 20s;
-  z-index: 0;
 }
 
 @keyframes circle {
