--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,15 @@ a{
   position: fixed;
   margin: 26vw 73vw;
   background-color: rgba(76, 249, 255, 0.277);
+  animation-name: wiggle;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+  animation-delay: 2s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
+
 }
 
 /* this is the quotes circle */
@@ -53,6 +62,14 @@ a{
   position: fixed;
   margin: 22vw 6vw;
   background-color: rgba(49, 216, 238, 0.1);
+  animation-name: wiggle;
+  animation-duration: 4s;
+  animation-timing-function: ease-out;
+  animation-delay: 3s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 
 /* this is the container that the quote will be in  */
@@ -72,6 +89,14 @@ a{
   position: fixed;
   margin: 12vw 52vw;
   background-color: rgba(81, 250, 171, 0.226);
+  animation-name: wiggle;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  animation-delay: 5s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 
 /* this is the mind circle */
@@ -81,6 +106,14 @@ a{
   position: absolute;
   margin: .2vw 76vw;
   background-color: rgba(0, 89, 255, 0.202);
+  animation-name: wiggle;
+  animation-duration: 4s;
+  animation-timing-function: ease-out;
+  animation-delay: 2.5s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 
 /* this is the random circle */
@@ -91,6 +124,14 @@ a{
   margin: 8vw 30vw;
   background-color: rgb(208, 252, 247);
   cursor: pointer; 
+  animation-name: wiggle;
+  animation-duration: 2.5s ease-out;
+  animation-timing-function: ease-out;
+  animation-delay: 4s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 .pRandom{
   margin: 28% auto;
@@ -104,6 +145,14 @@ a{
   position: fixed;
   margin: 32vw 42vw;
   background-color: rgba(0, 89, 255, 0.075);
+  animation-name: wiggle;
+  animation-duration: 2.1s;
+  animation-timing-function: ease-out;
+  animation-delay: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 .pAbout{
   margin: 35% auto;
@@ -118,6 +167,14 @@ a{
   margin: 2vw 2vw;
   background-color: rgba(125, 197, 197, 0.2);
   display: fixed;
+  animation-name: wiggle;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+  animation-delay: .8s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 
 #username p{
@@ -224,3 +281,16 @@ a{
   transform: scale(1.3);
   transition-duration: 1s;
 }
+
+
+@keyframes wiggle {
+  0% {
+    transform: translate(1vw, 0) scaleY(0.98) scaleX(1.01);
+    border-radius: 100%;
+  }
+  50% {
+    tranform: translate(0, 0);
+  }
+  100% {
+    transform: translate(.4px,0) scaleY(1.01) scaleX(0.98);
+  }
