--- a/css/nourish.css
+++ b/css/nourish.css
@@ -13,7 +13,6 @@ body{
   border-radius: 50%;
   font-size: 4vw;
   color: #fff;
-  line-height: 500px;
   text-align: center;
   position: fixed;
   margin: .2vw 76vw;
@@ -31,7 +30,6 @@ body{
   border-radius: 50%;
   font-size: 2vw;
   color: #fff;
-  line-height: 500px;
   text-align: center;
   position: fixed;
   margin: 22vw 85vw;
@@ -72,7 +70,6 @@ a{
   place-items: center;
 }
 
-
 h2, img, p {
   position: absolute;
   place-items: center;
@@ -86,18 +83,17 @@ h2, img, p {
 
 h2{
   top: 15%;
-  font-size: 8vw;
+  font-size: 7.5vw;
 }
 
 img{
   top: 15%;
   max-width: 15vw;
   margin-left: 20vw;
-  padding-top: 25vw;
+  margin-top: 14vw;
   display:block;
   z-index: -1;
 }
-
 
 .img{
   background-image: url('/img/bubbleDark60.png');
@@ -108,7 +104,7 @@ img{
   /* transform:rotate(0deg);
   -webkit-transform:rotate(0deg);
   -moz-transform:rotate(0deg); */
-  transition:0.5s ease transform;
+  transition:0.5s ease transform; 
 }
 
 .img:hover{
