--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,7 @@ a{
   margin: 26vw 73vw;
   background-color: rgba(76, 249, 255, 0.277);
   animation-name: wiggle;
-  animation-duration: 3s;
-  animation-timing-function: ease-out;
-  animation-delay: 2s;
+  animation-duration: 5s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -63,9 +61,7 @@ a{
   margin: 22vw 6vw;
   background-color: rgba(49, 216, 238, 0.1);
   animation-name: wiggle;
-  animation-duration: 4s;
-  animation-timing-function: ease-out;
-  animation-delay: 3s;
+  animation-duration: 6s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -90,9 +86,7 @@ a{
   margin: 12vw 52vw;
   background-color: rgba(81, 250, 171, 0.226);
   animation-name: wiggle;
-  animation-duration: 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 5s;
+  animation-duration: 4s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -107,9 +101,7 @@ a{
   margin: .2vw 76vw;
   background-color: rgba(0, 89, 255, 0.202);
   animation-name: wiggle;
-  animation-duration: 4s;
-  animation-timing-function: ease-out;
-  animation-delay: 2.5s;
+  animation-duration: 6s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -125,9 +117,7 @@ a{
   background-color: rgb(208, 252, 247);
   cursor: pointer; 
   animation-name: wiggle;
-  animation-duration: 2.5s ease-out;
-  animation-timing-function: ease-out;
-  animation-delay: 4s;
+  animation-duration: 4.5s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -146,9 +136,7 @@ a{
   margin: 32vw 42vw;
   background-color: rgba(0, 89, 255, 0.075);
   animation-name: wiggle;
-  animation-duration: 2.1s;
-  animation-timing-function: ease-out;
-  animation-delay: 1s;
+  animation-duration: 4.1s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -168,9 +156,7 @@ a{
   background-color: rgba(125, 197, 197, 0.2);
   display: fixed;
   animation-name: wiggle;
-  animation-duration: 3s;
-  animation-timing-function: ease-out;
-  animation-delay: .8s;
+  animation-duration: 5s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-fill-mode: none;
@@ -285,16 +271,25 @@ a{
 
 @keyframes wiggle {
   0% {
-    transform: translate(.5vw, 0) scaleY(0.98) scaleX(1.01);
+    transform: translate(.1vw, .2vw) scaleY(0.97) scaleX(1.01);
     border-radius: 100%;
   }
-  10%{
-    transform: translate(1vw, 0) scaleY(0.98) scaleX(1.01);
+  20%{
+    transform: translate(.2vw, .4vw) scaleY(0.99) scaleX(1.01);
     border-radius: 100%;
   }
-  50% {
-    tranform: translate(0, 0);
+  40%{
+    transform: translate(.3vw, .6vw) scaleY(1.02) scaleX(1.01);
+    border-radius: 100%;
+  }
+  60% {
+    transform: translate(.2vw, .4vw) scaleY(0.99) scaleX(1.01);
+    border-radius: 100%;
+  }
+  80% {
+    transform: translate(0.1vw, .2vw) scaleY(0.98) scaleX(1.01);
+    border-radius: 100%;
   }
   100% {
-    transform: translate(.4px,0) scaleY(1.01) scaleX(0.98);
+    transform: translate(0vw, 0vw) scaleY(.97) scaleX(0.98);
   }
