--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -52,7 +52,7 @@ a{
 }
 
 .img{
-  background-image: url('/img/bubbleDark60.png');
+  background-image: url('./img/bubbleDark60.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
@@ -60,7 +60,7 @@ a{
 }
 
 .img:hover{
-  background-image: url('/img/bubbleDark.png');
+  background-image: url('./img/bubbleDark.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
