--- a/css/body.css
+++ b/css/body.css
@@ -95,7 +95,7 @@ img{
 }
 
 .img{
-  background-image: url('./img/bubbleDark60.png');
+  background-image: url('../img/bubbleDark60.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
@@ -113,7 +113,7 @@ img{
 }
 
 .grow:hover{
-  background-image: url('./img/bubbleDark.png');
+  background-image: url('../img/bubbleDark.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
