--- a/css/mental.css
+++ b/css/mental.css
@@ -94,7 +94,7 @@ img{
 }
 
 .img{
-  background-image: url('./img/bubbleDark60.png');
+  background-image: url('../img/bubbleDark60.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
@@ -106,7 +106,7 @@ img{
 }
 
 .img:hover{
-  background-image: url('./img/bubbleDark.png');
+  background-image: url('../img/bubbleDark.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
@@ -123,7 +123,7 @@ img{
 }
 
 .grow:hover{
-  background-image: url('./img/bubbleDark.png');
+  background-image: url('../img/bubbleDark.png');
   background-size: 134%;
   background-repeat: no-repeat;
   background-position: center;
